--- a/templates/barber/profile.html.twig
+++ b/templates/barber/profile.html.twig
@@ -204,15 +204,15 @@
                                             </div>
                                             <div class="col-md-6 form-group">
                                                 <label>{{ 'profile.form.first_name' | trans }}</label>
-                                                {{ form_widget(form.first_name, {'attr': {'class': 'form-control form-control-lg'}}) }}
+                                                {{ form_widget(form.first_name, {'attr': {'class': 'form-control form-control-lg', 'placeholder': 'profile.form.first_name_placeholder'|trans}}) }}
                                             </div>
                                             <div class="col-md-6 form-group">
                                                 <label>{{ 'profile.form.last_name' | trans }}</label>
-                                                {{ form_widget(form.last_name, {'attr': {'class': 'form-control form-control-lg'}}) }}
+                                                {{ form_widget(form.last_name, {'attr': {'class': 'form-control form-control-lg', 'placeholder': 'profile.form.last_name_placeholder'|trans}}) }}
                                             </div>
                                             <div class="col-md-12 form-group">
                                                 <label>{{ 'profile.form.phone' | trans }}</label>
-                                                {{ form_widget(form.phone, {'attr': {'class': 'form-control form-control-lg'}}) }}
+                                                {{ form_widget(form.phone, {'attr': {'class': 'form-control form-control-lg', 'placeholder': 'profile.form.phone_placeholder'|trans}}) }}
                                                 {{ form_errors(form.phone) }}
                                             </div>
                                         </div>
