--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -348,8 +348,8 @@
     <div class="container pb-20">
         <div class="row">
             <div class="col-12 text-center">
-                <p class="text-muted text-small">
-                    <a href="https://www.flaticon.com/free-icons/barbershop" title="barbershop icons" target="_blank" rel="noopener">Barbershop icons created by Smashicons - Flaticon</a>
+                <p style="font-size: 12px; color: #666; margin-top: 20px;">
+                    <a href="https://www.flaticon.com/free-icons/barbershop" title="barbershop icons" target="_blank" rel="noopener" style="color: #666; text-decoration: none;">Barbershop icons created by Smashicons - Flaticon</a>
                 </p>
             </div>
         </div>
