--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -135,6 +135,14 @@
                     </div>
                 </div>
             </div>
+            <!-- Icon Attribution -->
+            <div class="row">
+                <div class="col-12">
+                    <p class="icon-attribution">
+                        <a href="https://www.flaticon.com/free-icons/barbershop" title="barbershop icons" target="_blank" rel="noopener">Barbershop icons created by Smashicons - Flaticon</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Services Area End -->
@@ -323,36 +331,12 @@
             <div class="row">
                 <div class="col-12">
                     <div class="testimonial-active dot-style">
-                        <!-- Single Testimonial -->
-                        <div class="single-testimonial text-center">
-                            <div class="testimonial-caption">
-                                <div class="testimonial-top-cap">
-                                    <p>"{{ 'homepage.testimonials.client1.text' | trans }}"</p>
-                                </div>
-                                <div class="testimonial-founder d-flex align-items-center justify-content-center">
-                                    <div class="founder-text">
-                                        <span>{{ 'homepage.testimonials.client1.name' | trans }}</span>
-                                        <p>{{ 'homepage.testimonials.client1.role' | trans }}</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <!-- Testimonials will be loaded dynamically from JSON -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Testimonials Area End -->
-
-    <!-- Attribution -->
-    <div class="container pb-20">
-        <div class="row">
-            <div class="col-12 text-center">
-                <p style="font-size: 12px; color: #666; margin-top: 20px;">
-                    <a href="https://www.flaticon.com/free-icons/barbershop" title="barbershop icons" target="_blank" rel="noopener" style="color: #666; text-decoration: none;">Barbershop icons created by Smashicons - Flaticon</a>
-                </p>
-            </div>
-        </div>
-    </div>
 
 {% endblock %}
