--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -241,6 +241,9 @@
         <!-- Form Validation Helper -->
         <script src="{{ asset('js/form_validation.js') }}"></script>
 
+        <!-- Testimonials Carousel -->
+        <script src="{{ asset('js/testimonials.js') }}"></script>
+
         <!-- Auto-hide flash messages after 5 seconds -->
         <script>
             $(document).ready(function() {
