--- a/templates/admin/procedures.html.twig
+++ b/templates/admin/procedures.html.twig
@@ -5,7 +5,7 @@
 
     {% block procedures %}
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/custom_styles.css') }}">
         {% endblock %}
         <table class="styled-table">
             <thead>
