--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -2,7 +2,7 @@
 {% include 'buttons/go_back_logout_buttons.html.twig' %}
 {% block body %}
 {% block stylesheets  %}
-    <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/custom_styles.css') }}">
 {% endblock %}
 <table class="styled-table">
     <thead>
